docs: add edit payload and response definitions
Also implemented the request handler and the db edit function.
