# internal/core/dtos/api_dtos.gen.go
@@ -3,11 +3,17 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package dto
 
-// CreateProjectTranslationRequestBody defines model for CreateProjectTranslationRequestBody.
+// The payload body to create a translation
 type CreateProjectTranslationRequestBody struct {
 	Code string `json:"code"`
 	Key  string `json:"key"`
 	Text string `json:"text"`
+}
+
+// EditProjectTranslationRequestBody defines model for EditProjectTranslationRequestBody.
+type EditProjectTranslationRequestBody struct {
+	// Embedded struct due to allOf(#/components/schemas/CreateProjectTranslationRequestBody)
+	CreateProjectTranslationRequestBody `yaml:",inline"`
 }
 
 // Standard Error response.
@@ -48,6 +54,9 @@ type GetProjectTranslationsLanguagesParam []string
 // ProjectNameParam defines model for ProjectNameParam.
 type ProjectNameParam string
 
+// TranslationIdParam defines model for TranslationIdParam.
+type TranslationIdParam string
+
 // Standard Error response.
 type BadRequest Error
 
@@ -75,5 +84,11 @@ type GetProjectTranslationsParams struct {
 // PostProjectTranslationJSONBody defines parameters for PostProjectTranslation.
 type PostProjectTranslationJSONBody CreateProjectTranslationRequestBody
 
+// PutProjectTranslationJSONBody defines parameters for PutProjectTranslation.
+type PutProjectTranslationJSONBody EditProjectTranslationRequestBody
+
 // PostProjectTranslationJSONRequestBody defines body for PostProjectTranslation for application/json ContentType.
 type PostProjectTranslationJSONRequestBody PostProjectTranslationJSONBody
+
+// PutProjectTranslationJSONRequestBody defines body for PutProjectTranslation for application/json ContentType.
+type PutProjectTranslationJSONRequestBody PutProjectTranslationJSONBody
